Clean tic tac toe

--- a/examples/tic_tac_toe/tic-tac-toe-local.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe-local.ipynb
@@ -2,9 +2,17 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "OpenPipe client initialized\n"
+          ]
+        }
+      ],
       "source": [
         "import art\n",
         "from dotenv import load_dotenv\n",
@@ -12,6 +20,7 @@
         "\n",
         "from art.utils.get_repo_root_path import get_repo_root_path\n",
         "from art.local import LocalAPI\n",
+        "from rollout import rollout\n",
         "\n",
         "load_dotenv()\n",
         "\n",
@@ -20,12 +29,7 @@
         "# get path to root of repo\n",
         "root_path = get_repo_root_path()\n",
         "\n",
-        "api = LocalAPI()\n",
-        "\n",
-        "model = art.TrainableModel(\n",
-        "    name=\"002-notebook\", project=\"tic-tac-toe-local\", base_model=\"Qwen/Qwen2.5-1.5B-Instruct\"\n",
-        ")\n",
-        "await model.register(api)"
+        "api = LocalAPI()\n"
       ]
     },
     {
@@ -34,7 +38,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from rollout import rollout\n",
+        "model = art.TrainableModel(\n",
+        "    name=\"002-notebook\", project=\"tic-tac-toe-local\", base_model=\"Qwen/Qwen2.5-1.5B-Instruct\"\n",
+        ")\n",
+        "await model.register(api)\n",
         "\n",
         "for i in range(await model.get_step(), 100):\n",
         "    train_groups = await art.gather_trajectory_groups(\n",
@@ -52,9 +59,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "362ccf92e043461bb0efdaa5f7faddd1",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "gather gpt-4o-mini:   0%|          | 0/40 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "d544a21a814b4387996e238e2f56962a",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "gather gpt-4o:   0%|          | 0/40 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "8f274f3a7a064d5b9bafef50917bb44d",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "gather gpt-4.1:   0%|          | 0/40 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "[None, None, None]"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import asyncio\n",
         "import os\n",
