--- a/examples/temporal-clue.ipynb
+++ b/examples/temporal-clue.ipynb
@@ -21,7 +21,9 @@
         "\n",
         "Completions will be logged to OpenPipe, and metrics will be logged to Weights & Biases.\n",
         "\n",
-        "You will learn how to construct an [agentic environment](#Environment), how to define a [rollout](#Rollout), and how to run a [training loop](#Loop).\n"
+        "You will learn how to construct an [agentic environment](#Environment), how to define a [rollout](#Rollout), and how to run a [training loop](#Loop).\n",
+        "\n",
+        "SIDE NOTE: If you're curious about how Temporal Clue works and want to learn how we trained a model to beat o3-mini, check out the [blog post](https://openpipe.ai/blog/using-grpo-to-beat-o1-o3-mini-and-r1-on-temporal-clue)!\n"
       ]
     },
     {
@@ -75,6 +77,7 @@
       "outputs": [],
       "source": [
         "import os\n",
+        "from art.local import LocalAPI\n",
         "\n",
         "\n",
         "# Optional\n",
@@ -125,11 +128,11 @@
       "outputs": [],
       "source": [
         "import art\n",
-        "from art.local import LocalAPI\n",
         "import asyncio\n",
         "from dotenv import load_dotenv\n",
         "import json\n",
         "import openai\n",
+        "import requests\n",
         "import random\n",
         "import re\n",
         "from typing import TypedDict\n",
@@ -143,7 +146,11 @@
         "    solution: dict[str, str]\n",
         "\n",
         "\n",
-        "puzzles: list[TemporalCluePuzzle] = json.load(open(\"./data/temporal-clue/puzzles.json\"))\n",
+        "# download the puzzles from the github repo\n",
+        "puzzles_url = \"https://raw.githubusercontent.com/openpipe/art/main/examples/data/temporal-clue/puzzles.json\"\n",
+        "puzzles_response = requests.get(puzzles_url)\n",
+        "\n",
+        "puzzles: list[TemporalCluePuzzle] = json.loads(puzzles_response.text)\n",
         "val_puzzles = puzzles[:64]\n",
         "test_puzzles = puzzles[64:128]\n",
         "train_puzzles = puzzles[128:]\n",
