--- a/examples/tic_tac_toe/benchmark_tic_tac_toe.ipynb
+++ b/examples/tic_tac_toe/benchmark_tic_tac_toe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -46,8 +46,7 @@
     "    df,\n",
     "    metric_name=\"win\",\n",
     "    models=[\n",
-    "        # BenchmarkModelKey(\"009\", \"009\", \"train\"),\n",
-    "        BenchmarkModelKey(\"001-script\", \"001-script\", \"train\"),\n",
+    "        BenchmarkModelKey(\"001-script\", \"agent-001\", \"train\"),\n",
     "        BenchmarkModelKey(\"gpt-4o\", \"GPT-4o\"),\n",
     "        BenchmarkModelKey(\"gpt-4.1\", \"GPT-4.1\"),\n",
     "    ],\n",
