--- a/examples/2048/2048-dev.ipynb
+++ b/examples/2048/2048-dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "# Declare the model\n",
     "model = art.TrainableModel(\n",
     "    name=\"012\",\n",
-    "    project=\"2048-dev\",\n",
+    "    project=\"2048\",\n",
     "    base_model=\"Qwen/Qwen2.5-3B-Instruct\",\n",
     "    # To run on a T4, we need to override some config defaults.\n",
     "    _internal_config=art.dev.InternalModelConfig(\n",
@@ -97,7 +97,7 @@
     "\n",
     "gpt_4o_mini = art.Model(\n",
     "    name=\"gpt-4o-mini\",\n",
-    "    project=\"2048-dev\",\n",
+    "    project=\"2048\",\n",
     "    inference_model_name=\"gpt-4o-mini\",\n",
     "    inference_base_url=\"https://api.openai.com/v1\",\n",
     "    inference_api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
@@ -106,7 +106,7 @@
     "\n",
     "gpt_4o = art.Model(\n",
     "    name=\"gpt-4o\",\n",
-    "    project=\"2048-dev\",\n",
+    "    project=\"2048\",\n",
     "    inference_model_name=\"gpt-4o\",\n",
     "    inference_base_url=\"https://api.openai.com/v1\",\n",
     "    inference_api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
@@ -115,7 +115,7 @@
     "\n",
     "gpt_4_1 = art.Model(\n",
     "    name=\"gpt-4.1\",\n",
-    "    project=\"2048-dev\",\n",
+    "    project=\"2048\",\n",
     "    inference_model_name=\"gpt-4.1\",\n",
     "    inference_base_url=\"https://api.openai.com/v1\",\n",
     "    inference_api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
