--- a/docs/documentation/getting-started/notebooks.mdx
+++ b/docs/documentation/getting-started/notebooks.mdx
@@ -1,7 +1,8 @@
 ---
-title: "📒 ART Notebooks"
-sidebarTitle: "📒 Notebooks"
+title: "ART Notebooks"
+sidebarTitle: "Notebooks"
 description: "Use ART to train agents for many different tasks."
+icon: "book"
 ---
 
 ## 2048
