--- a/docs/examples/tutorials/summarizer.mdx
+++ b/docs/examples/tutorials/summarizer.mdx
@@ -1,7 +1,8 @@
 ---
 title: "Summarizer Tutorial"
-sidebarTitle: "🗒️ Summarizer"
+sidebarTitle: "Summarizer"
 description: "Train a summarizer model to outperform Sonnet 4 and GPT-4.1."
+icon: "list"
 ---
 
 Most SOTA models are already trained to condense long documents into short summaries. However, not every summary is created equal.
