--- a/docs/documentation/getting-started/quick-start.mdx
+++ b/docs/documentation/getting-started/quick-start.mdx
@@ -1,6 +1,7 @@
 ---
-title: "⚡️ Quick Start"
+title: "Quick Start"
 description: "Get started with OpenPipe in a few quick steps."
+icon: "forward"
 ---
 
 ## Step 1: Create Your OpenPipe Account
