Remove repetitive statement

--- a/docs/getting-started/faq.mdx
+++ b/docs/getting-started/faq.mdx
@@ -5,12 +5,12 @@ icon: "block-question"
 ---
 
 <Accordion title="What is ART?">
-  ART (Agent Reinforcement Trainer) is a reinforcement learning framework that
-  allows for easy training of LLM-based agents using GRPO (as well as PPO and
-  other techniques in the future). It's focused on best-in-class training
-  efficiency ergonomic agentic multi-turn support.
+ART (Agent Reinforcement Trainer) is a reinforcement learning framework that
+allows for easy training of LLM-based agents using GRPO (as well as PPO and
+other techniques in the future). It's focused on best-in-class training
+efficiency ergonomic agentic multi-turn support.
 
-ART uses GRPO (a reinforcement learning technique published by DeepSeek in 2024) is used to train LLMs (large language models) to more reliably follow instructions provided in their system and user messages. By allowing an LLM to make multiple attempts at accomplishing a task and scoring each rollout’s performance, we shift the LLM’s weights to make it more likely to perform the way it did in its best runs while teaching it to avoid its worst behavior.
+By allowing an LLM to make multiple attempts at accomplishing a task and scoring each rollout’s performance, we shift the LLM’s weights to make it more likely to perform the way it did in its best runs while teaching it to avoid its worst behavior.
 
 </Accordion>
 
