--- a/docs/getting-started/faq.mdx
+++ b/docs/getting-started/faq.mdx
@@ -10,7 +10,7 @@ allows for easy training of LLM-based agents using GRPO (as well as PPO and
 other techniques in the future). It's focused on best-in-class training
 efficiency ergonomic agentic multi-turn support.
 
-By allowing an LLM to make multiple attempts at accomplishing a task and scoring each rollout’s performance, we shift the LLM’s weights to make it more likely to perform the way it did in its best runs while teaching it to avoid its worst behavior.
+By allowing an LLM to make multiple attempts at accomplishing a task and scoring each rollout’s performance, we shift the model's weights to make it more likely to perform the way it did in its best runs and to avoid its least effective behavior.
 
 </Accordion>
 
